--- a/Aathma.html
+++ b/Aathma.html
@@ -1,14 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MP3 Player</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      text-align: center;
+    }
+
+    h1 {
+      margin-bottom: 20px;
+    }
+
+    audio {
+      max-width: 100%;
+    }
+  </style>
 </head>
 <body>
   <h1>MP3 Player</h1>
 
   <audio controls>
-    <source src="Speech/Aathma.mp3" type="audio/mpeg">
+    <source src="Aathma.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 </body>
 </html>
+
