--- a/Aaryan.html
+++ b/Aaryan.html
@@ -24,7 +24,7 @@
   <h1>MP3 Player</h1>
 
   <audio controls>
-    <source src="Speech/Aaryan.mp3" type="audio/mpeg">
+    <source src="Aaryan.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 </body>
