--- a/Brian.html
+++ b/Brian.html
@@ -24,7 +24,7 @@
   <h1>MP3 Player</h1>
 
   <audio controls>
-    <source src="Brain.mp3" type="audio/mpeg">
+    <source src="Brian.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 </body>
