--- a/Aaryan.html
+++ b/Aaryan.html
@@ -41,7 +41,7 @@
 <body>
   <h1>WELCOME TO COSMOS CLUSTER 8</h1>
 
-  <audio controls>
+  <audio controls autoplay>
     <source src="Aaryan.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
