--- a/Landon.html
+++ b/Landon.html
@@ -2,30 +2,183 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MP3 Player</title>
+  <title>MP3 Player with Firework Effect</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
-      padding: 20px;
-      text-align: center;
+      padding: 0;
+      overflow: hidden;
+      position: relative;
+      z-index: 1;
     }
 
     h1 {
-      margin-bottom: 20px;
+      margin-top: 20px;
+      color: white;
+      text-align: center;
+      position: relative;
+      z-index: 2;
     }
 
     audio {
       max-width: 100%;
+      margin: 20px auto;
+      display: block;
+      position: relative;
+      z-index: 2;
+    }
+
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: 0;
     }
   </style>
 </head>
 <body>
-  <h1>MP3 Player</h1>
+  <h1>WELCOME TO COSMOS CLUSTER 8</h1>
 
-  <audio controls>
+  <audio controls autoplay>
     <source src="Landon.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
+
+  <script>
+    let fireworks = [];
+    let gravity;
+
+    function setup() {
+      createCanvas(windowWidth, windowHeight);
+      colorMode(HSB);
+      gravity = createVector(0, 0.2);
+      stroke(255);
+      strokeWeight(4);
+      background(0);
+    }
+
+    function draw() {
+      colorMode(RGB);
+      background(0, 0, 0, 25);
+
+      if (random(1) < 0.04) {
+        fireworks.push(new Firework());
+      }
+
+      for (let i = fireworks.length - 1; i >= 0; i--) {
+        fireworks[i].update();
+        fireworks[i].show();
+
+        if (fireworks[i].done()) {
+          fireworks.splice(i, 1);
+        }
+      }
+    }
+
+    class Firework {
+      constructor() {
+        this.hu = random(255);
+        this.firework = new Particle(random(width), height, true, this.hu);
+        this.exploded = false;
+        this.particles = [];
+      }
+
+      done() {
+        return this.exploded && this.particles.length === 0;
+      }
+
+      update() {
+        if (!this.exploded) {
+          this.firework.applyForce(gravity);
+          this.firework.update();
+
+          if (this.firework.vel.y >= 0) {
+            this.exploded = true;
+            this.explode();
+          }
+        }
+
+        for (let i = this.particles.length - 1; i >= 0; i--) {
+          this.particles[i].applyForce(gravity);
+          this.particles[i].update();
+
+          if (this.particles[i].done()) {
+            this.particles.splice(i, 1);
+          }
+        }
+      }
+
+      explode() {
+        for (let i = 0; i < 100; i++) {
+          const particle = new Particle(
+            this.firework.pos.x,
+            this.firework.pos.y,
+            false,
+            this.hu
+          );
+          this.particles.push(particle);
+        }
+      }
+
+      show() {
+        if (!this.exploded) {
+          this.firework.show();
+        }
+
+        for (let i = 0; i < this.particles.length; i++) {
+          this.particles[i].show();
+        }
+      }
+    }
+
+    class Particle {
+      constructor(x, y, firework, hu) {
+        this.pos = createVector(x, y);
+        this.firework = firework;
+        this.lifespan = 255;
+        this.hu = hu;
+        if (this.firework) {
+          this.vel = createVector(0, random(-12, -8));
+        } else {
+          this.vel = p5.Vector.random2D();
+          this.vel.mult(random(2, 10));
+        }
+        this.acc = createVector(0, 0);
+      }
+
+      applyForce(force) {
+        this.acc.add(force);
+      }
+
+      update() {
+        if (!this.firework) {
+          this.vel.mult(0.9);
+          this.lifespan -= 4;
+        }
+        this.vel.add(this.acc);
+        this.pos.add(this.vel);
+        this.acc.mult(0);
+      }
+
+      done() {
+        return this.lifespan < 0;
+      }
+
+      show() {
+        colorMode(HSB);
+        if (!this.firework) {
+          strokeWeight(2);
+          stroke(this.hu, 255, 255, this.lifespan);
+        } else {
+          strokeWeight(4);
+          stroke(this.hu, 255, 255);
+        }
+        point(this.pos.x, this.pos.y);
+      }
+    }
+  </script>
 </body>
 </html>
+
